# giganttic

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  pylintrc  pylintrc.txt
giganttic/: __init__.py  classes.py  colours.py  data_fns.py  data_import.py  data_modify.py  figure_sizes.py  giganttic.py  import_fns.py  import_functions.py  mpl_gantt.py  plot.py  plotly_gantt.py  plotting_extras.py  plotting_fns.py
giganttic/input/: exampledata.csv
input/: exampledata.csv
src/giganttic/: __init__.py  classes.py  colours.py  data_export.py  data_import.py  data_modify.py  export.py  figure_dimensions.py  figure_sizes.csv  figure_sizes.py  giganttic.py  mpl_gantt.py  plotly_gantt.py  plotting_extras.py
test/: case_6.html  exampledata1.csv  exampledata2.xlsx  giganttic_test.ipynb  milestone-extract-test.py  milestone_extract_test.py  plotly_testing.py  test.py  test_classes.py  test_plotly.ipynb  testdata.xlsx
test/output/: plotly_testing.html
tests/: giganttic_test.ipynb  milestone_extract_test.py  msp_test.xml  plotly_testing.py  test.py  test_classes.py
tests/input/: exampledata1.csv  msp_test.mpp
tests/output/: case_6.html  plotly_testing.html
